--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,6 @@
 image: ensime/ensime:latest
 script:
-  - apt-get install -yy ruby ruby-dev &&
+  - apt-get install -yy ruby ruby-dev libssl libssl-dev &&
     gem install bundle &&
     bundle install &&
     bundle exec rake
