--- a/.drone.yml
+++ b/.drone.yml
@@ -1,8 +1,10 @@
-image: ensime/ensime:latest
-script:
+build:
+  image: ensime/ensime:latest
+  pull: true
+commands:
   - apt-get install -yy make g++ gcc openssl libssl-dev ruby ruby-dev python-mock &&
     pip install websocket-client && 
     gem install bundle &&
-    bundle install &&
-    bundle exec rake &&
-    python spec/ensime.py
+    bundle install
+  - bundle exec rake
+  - python spec/ensime.py
