--- a/.drone.yml
+++ b/.drone.yml
@@ -2,9 +2,6 @@ build:
   image: ensime/ensime:latest
   pull: true
   commands:
-    - apt-get install -yy make g++ gcc openssl libssl-dev ruby ruby-dev python-mock &&
-      pip install websocket-client ensime_launcher && 
-      gem install bundle &&
-      bundle install
+    - pip install websocket-client ensime_launcher
     - bundle exec rake
     - python spec/ensime.py
