missing bundle install

--- a/.drone.yml
+++ b/.drone.yml
@@ -3,5 +3,6 @@ build:
   pull: true
   commands:
     - pip install ensime_launcher
+    - bundle install
     - bundle exec rake
     - python spec/ensime.py
